Apply resource group ID as a unique prefix to each resource name
* Set the resource group ID as variable
* Add the resource group ID as a prefix of each resource name
* Fix typo
